Fix a problem with IE6 cutting off left of header

--- a/app/assets/stylesheets/application-ie.css.scss
+++ b/app/assets/stylesheets/application-ie.css.scss
@@ -74,3 +74,7 @@ div.navbar-top{
 .page-container .row .span3{
   width: 200px !important;
 }
+
+.navbar-top .row .container{
+  margin-left: 0px !important;
+}
